# welife-os

./: .gitattributes  .gitignore  CONTRIBUTING.md  FIXES.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
docs/: agent-protocol.md  architecture.md  chat-ir-spec.md
engine/: README.md  go.mod  go.sum
engine/cmd/welife/: main.go  main_test.go
engine/internal/agent/: agent.go  coach.go  coach_test.go  doc.go  emotion.go  emotion_test.go  opportunity.go  opportunity_test.go  risk.go  risk_test.go  simulator.go  simulator_test.go
engine/internal/chatir/: model.go  model_test.go  validate.go
engine/internal/forum/: doc.go  engine.go  engine_test.go  moderator.go  protocol.go
engine/internal/graph/: doc.go  engine.go  engine_test.go  extractor.go  store.go  store_test.go
engine/internal/importer/: service.go  service_test.go
engine/internal/llm/: cloud.go  cloud_test.go  json.go  ollama.go  ollama_test.go  swappable.go  swappable_test.go
engine/internal/parser/: discord.go  discord_test.go  doc.go  generic_csv.go  generic_csv_test.go  imessage.go  imessage_test.go  lark.go  lark_test.go  parser.go  qq.go  qq_test.go  registry.go  telegram.go  telegram_test.go  wechat_csv.go  wechat_csv_test.go  whatsapp.go  (+1 more)
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tauri-app/src/: App.vue
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
(+145 files in other folders)
