[package]
name = "welife-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop shell for WeLife OS"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
